* bugfix for flicker on iphone updated assets with smaller ones

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,8 @@ html, body, .full {
   height: 100%;
   float: left;
   transition: background-image 3s linear;
+  -webkit-perspective: 1000;
+  -webkit-backface-visibility: hidden;
 }
 .absolute-center {
   position: absolute;
